--- a/Formulario.html
+++ b/Formulario.html
@@ -1,111 +1,104 @@
 <!--Christyan Araujo Silva-->
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="pt-BR">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="Formulario.css" media="">
-        <title>1º de Christyan</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="Formulario.css" media="">
+    <title>Form Cadastro DEVs</title>
+</head>
 
-    <body>
-        
-        <div>
-            <h1 id="titulo">Cadastro de DEVs</h1>
-            <p id="subtitulo">Complete suas informações</p>
-            <br>
+<body>
+    <div>
+        <h1 id="titulo">Cadastro de DEVs</h1>
+        <p id="subtitulo">Complete suas informações</p>
+        <br>
+    </div>
 
-            <form>
+    <form>
+        <fieldset class="grupo">
+            <div class="campo">
+                <label for="nome"><strong>Nome</strong></label>
+                <input type="text" name="nome" id="nome" required>
+            </div>
 
-                <fieldset class="grupo">
-                    <div class="campo">
-                        <label for="nome"><Strong>Nome</Strong></label>
-                        <input type="text" name="nome" id="nome" required>
-                    </div>
+            <div class="campo">
+                <label for="sobrenome"><strong>Sobrenome</strong></label>
+                <input type="text" name="sobrenome" id="sobrenome" required>
+            </div>
+        </fieldset>
 
-                    <div class="campo">
-                        <label for="sobrenome"><Strong>Sobrenome</Strong></label>
-                        <input type="text" name="sobrenome" id="sobrenome" required>
-                    </div>
-                </fieldset>
-
-
-                <div class="campo">
-                    <label for="email"><Strong>Email</Strong></label>
-                    <input type="email" name="email" id="email" required>
-                </div>
-
-
-                <div class="campo">
-                    <label><Strong>De qual lado da aplicação você desenvolve?</Strong></label>
-
-                    <label>
-                        <input type="radio" name="devweb" value="frontend" checked>Front-end
-                    </label>
-
-                    <label>
-                        <input type="radio" name="devweb" value="backend">Back-end
-                    </label>
-
-                    <label>
-                        <input type="radio" name="devweb" value="fullstack">Fullstack
-                    </label>
-                </div>
-
-
-                <div class="campo">
-                    <label for="senioridade"><Strong>Senioridade</Strong></label>
-                    <select id="senioridade">
-                        <option selected disabled value="">Selecione</option>
-                        <option>Junior</option>
-                        <option>Pleno</option>
-                        <option>Senior</option>
-                    </select>
-                </div>
-
-
-                <fieldset class="grupo">
-                    <div id="check">
-                        <label><Strong>Selecione as tecnologias que utiliza:</Strong></label><br><br>
-
-                        <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
-                        <label for="tecnologia1">HTML</label>
-
-                        <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
-                        <label for="tecnologia2">CSS</label>
-
-                        <input type="checkbox" id="tecnologia3" name="tecnologia3" value="JavaScript">
-                        <label for="tecnologia3">JavaScript</label>
-
-                        <input type="checkbox" id="tecnologia4" name="tecnologia4" value="PHP">
-                        <label for="tecnologia4">PHP</label>
-
-                        <input type="checkbox" id="tecnologia5" name="tecnologia5" value="C#">
-                        <label for="tecnologia5">C#</label>
-
-                        <input type="checkbox" id="tecnologia6" name="tecnologia6" value="Python">
-                        <label for="tecnologia6">Python</label>
-
-                        <input type="checkbox" id="tecnologia7" name="tecnologia7" value="Java">
-                        <label for="tecnologia7">Java</label>
-                    </div>
-                </fieldset>
-
-                <div class="campo">
-                    <br>
-                    <label><Strong>Conte um pouco da sua experiencia:</Strong></label>
-                    <textarea row="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
-                </div>
-
-                <button class="botao" type="submit">Concluido</button>
-
-            </form>
-
+        <div class="campo">
+            <label for="email"><strong>Email</strong></label>
+            <input type="email" name="email" id="email" required>
         </div>
 
-    </body>
+        <div class="campo">
+            <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
+
+            <label>
+                <input type="radio" name="devweb" value="frontend" checked>Front-end
+            </label>
+
+            <label>
+                <input type="radio" name="devweb" value="backend">Back-end
+            </label>
+
+            <label>
+                <input type="radio" name="devweb" value="fullstack">Fullstack
+            </label>
+        </div>
+
+        <div class="campo">
+            <label for="senioridade"><strong>Senioridade</strong></label>
+
+            <select id="senioridade" required>
+                <option selected disabled value="">Selecione</option>
+                <option>Júnior</option>
+                <option>Pleno</option>
+                <option>Sênior</option>
+            </select>
+        </div>
+
+        <fieldset class="grupo">
+            <div id="check">
+                <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
+
+                <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
+                <label for="tecnologia1"> HTML</label>
+
+                <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
+                <label for="tecnologia2"> CSS</label>
+
+                <input type="checkbox" id="tecnologia3" name="tecnologia3" value="JavaScript">
+                <label for="tecnologia3"> JavaScript</label>
+
+                <input type="checkbox" id="tecnologia4" name="tecnologia4" value="PHP">
+                <label for="tecnologia4"> PHP</label>
+
+                <input type="checkbox" id="tecnologia5" name="tecnologia5" value="C#">
+                <label for="tecnologia5"> C#</label>
+
+                <input type="checkbox" id="tecnologia6" name="tecnologia6" value="Python">
+                <label for="tecnologia6"> Python</label>
+
+                <input type="checkbox" id="tecnologia7" name="tecnologia7" value="Java">
+                <label for="tecnologia7"> Java</label>
+            </div>
+        </fieldset>
+
+        <div class="campo">
+            <br>
+            <label for="experiencia"><strong>Conte um pouco mais da sua experiência: </strong></label>
+
+            <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
+        </div>
+
+        <button class="botao" type="submit" onsubmit="">Concluído</button>
+    </form>
+</body>
 
 </html>
